--- a/Source/WPF/MyMoney/App.xaml
+++ b/Source/WPF/MyMoney/App.xaml
@@ -1,14 +1,16 @@
 ﻿<Application x:Class="Walkabout.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Startup="MyApplicationStartup"
-             >
+             Startup="MyApplicationStartup"             
+             xmlns:ui="http://schemas.modernwpf.com/2019">
+             
 
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <!--<ResourceDictionary Source="Themes/generic.xaml"/>
-                <ResourceDictionary Source="Themes/Theme-VS2010.xaml"/>-->
+                <ui:ThemeResources />
+                <ui:XamlControlsResources />
+                <ResourceDictionary Source="Themes/generic.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
