--- a/Source/WPF/MyMoney/MainWindow.xaml
+++ b/Source/WPF/MyMoney/MainWindow.xaml
@@ -3,19 +3,24 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:c="clr-namespace:Walkabout.Controls"
-        xmlns:views="clr-namespace:Walkabout.Views"
         xmlns:vc="clr-namespace:Walkabout.Views.Controls"
         xmlns:cc="clr-namespace:Walkabout.Charts"
         xmlns:p="clr-namespace:Walkabout.Commands"
         xmlns:help="clr-namespace:Walkabout.Help"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:ui="http://schemas.modernwpf.com/2019"
+        ui:WindowHelper.UseModernWindowStyle="True"
+        ui:ThemeManager.IsThemeAware="True"
         mc:Ignorable="d" 
         AutomationProperties.AutomationId="MoneyWindow"
-        Title="MyMoney" Height="600" Width="900"
-        Background="{DynamicResource MainBackgroundBrush}" 
+        Title="MyMoney" 
+        Height="600" 
+        Width="900"
         help:HelpService.HelpKeyword="Home"
-        ResizeMode="CanResizeWithGrip" Icon="/MyMoney;component/Icons/App.ico">
+        ResizeMode="CanResizeWithGrip" 
+        Icon="/MyMoney;component/Icons/App.ico"
+        >
     <Window.Resources>
     </Window.Resources>
 
@@ -102,10 +107,12 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
+
         <!-- TOP MENU -->
-        <Grid Grid.Row="0" Background="{DynamicResource MenuBackgroundBrush}" Style="{DynamicResource WalkaboutToolBarMenuFocusVisual}" >
+        <Grid Grid.Row="0" >
 
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
@@ -115,13 +122,16 @@
             </Grid.ColumnDefinitions>
 
             <!-- BACK and FORWARD button -->
-            <GroupBox Header="History" Height="24" Style="{DynamicResource HistoryBackForward}" Width="50"/>
 
+            <Button x:Name="BackButton" Grid.Column="0" Command="p:AppCommands.CommandBack" IsEnabled="True" Style="{DynamicResource NavigationBackButtonNormalStyle}"/>
+            <Button x:Name="ForwardButton" Grid.Column="1" Command="p:AppCommands.CommandForward" IsEnabled="True" Style="{DynamicResource  NavigationBackButtonNormalStyle}">
+                    <Button.LayoutTransform>
+                        <RotateTransform CenterX="0.5" CenterY="0.5" Angle="180"/>
+                    </Button.LayoutTransform>
+                </Button>
+   
             <!-- REGULAR MENU -->
-            <Border Grid.Column="1" VerticalAlignment="Center" Margin="10,0,0,0" 
-                    Background="{DynamicResource MenuBackgroundBrush}" 
-                    BorderBrush="{DynamicResource ToolBarMenuBorder}"
-                    Padding="3">
+            <Border Grid.Column="2" VerticalAlignment="Center">
 
                 <Menu x:Name="MainMenu" IsMainMenu="True" Grid.Column="1" VerticalAlignment="Center" >
                     <MenuItem x:Name="MenuFile" Header="_File">
@@ -219,34 +229,40 @@
             </Border>
 
             <!-- TOOLBAR BUTTON -->
-            <Button x:Name="ButtonSynchronize" Command="p:AppCommands.CommandOnlineSyncAccount" Grid.Column="2" VerticalAlignment="Center" Margin="10,0,0,0" Height="22" Padding="1">
+            <Button x:Name="ButtonSynchronize" Command="p:AppCommands.CommandOnlineSyncAccount" Grid.Column="3" 
+                    VerticalAlignment="Center" Margin="10,0,0,0" Padding="1">
                 <StackPanel Orientation="Horizontal">
-                    <Image Source="Icons\Synchronize.png" />
-                    <TextBlock Margin="3,0,2,0" Text="Download" VerticalAlignment="Center" FontSize="10"/>
+                    <Image Source="Icons\Synchronize.png" Height="14" Width="14"/>
+                    <TextBlock Margin="5,0,5,0" Text="Download" VerticalAlignment="Center"/>
                 </StackPanel>
             </Button>
 
-            <c:DropDownButton Height="22" VerticalAlignment="Center" Grid.Column="3" Grid.Row="2" x:Name="PendingChangeDropDown" Margin="10,0,0,0" Padding="1"
-                              MouseEnter="PendingChangeDropDown_MouseEnter" MouseLeave="PendingChangeDropDown_MouseLeave"
-                              PreviewMouseDown="PendingChangeDropDown_MouseDown">
-                <c:DropDownButton.Popup >
-                    <Popup Opened="PendingChangePopupOpened" MouseLeave="PendingChangeDropDown_MouseLeave">
-                        <Border Background="{DynamicResource ControlBackgroundBrush}" BorderThickness="1" BorderBrush="Gray">
+            <ui:SplitButton x:Name="PendingChangeDropDown" 
+                              VerticalAlignment="Center" 
+                              Grid.Column="4" 
+                              Grid.Row="2"
+                              Margin="10,0,0,0" 
+                              Padding="1"
+                              Background="{DynamicResource SystemControlPageBackgroundChromeMediumLowBrush}"
+                              Click="PendingChangeClicked"
+                              >
+                <TextBlock Text="Save" Margin="5,0,5,0"/>
+
+                <ui:SplitButton.Flyout>
+                    <ui:Flyout x:Name="pendingChangeFlyout" Opening="OnOpeningPendingChangeFlyout">
+                        <Border Background="{DynamicResource SystemControlPageBackgroundChromeMediumLowBrush}">
                             <Grid >
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
                                     <RowDefinition Height="Auto"/>
                                 </Grid.RowDefinitions>
+                                <StackPanel x:Name="pendingStack" Grid.Row="0"></StackPanel>
                                 <Button Grid.Row="1" Command="p:AppCommands.CommandRevertChanges" HorizontalAlignment="Right" Margin="3">Revert Changes</Button>
                             </Grid>
                         </Border>
-                    </Popup>
-                </c:DropDownButton.Popup>
-                <StackPanel Orientation="Horizontal" >
-                    <Image Source="Icons\Pencil.png" Margin="2,0,0,0"/>
-                    <TextBlock Margin="3,0,0,0" Text="Save" VerticalAlignment="Center" FontSize="10"/>
-                </StackPanel>
-            </c:DropDownButton>
+                    </ui:Flyout>
+                </ui:SplitButton.Flyout>
+            </ui:SplitButton>
 
 
             <Button x:Name="ButtonShowUpdateInfo" Grid.Column="5" VerticalAlignment="Center" Margin="10,0,5,0" Height="22" Padding="1" HorizontalAlignment="right" Click="OnButtonShowUpdateInfoClick">
@@ -264,7 +280,7 @@
             <Grid x:Name="GridColumns" >
 
                 <Grid.ColumnDefinitions>
-                    <!-- TOOLBOX -->
+                    <!-- Left Panel -->
                     <ColumnDefinition Width="20*" MinWidth="60"/>
 
                     <!-- Splitter -->
@@ -275,7 +291,7 @@
 
                 </Grid.ColumnDefinitions>
 
-                <!-- TOOLBOX -->
+                <!-- Left Panel -->
                 <Grid SizeChanged="Grid_SizeChanged">
                     <c:Accordion x:Name="toolBox" Grid.Column="0"/>
                 </Grid>
@@ -298,12 +314,9 @@
                     </Grid.RowDefinitions>
 
 
-
                     <!-- Main area where most of the editing is done -->
                     <Grid Background="Transparent" Grid.Row="0">
-
                         <ContentControl x:Name="EditingZone" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch"/>
-
                     </Grid>
 
 
@@ -377,7 +390,7 @@
         <c:AppSettings x:Name="AppSettingsPanel" Grid.Row="1" Width="300" HorizontalAlignment="Right" Visibility="Collapsed">
         </c:AppSettings>
 
-        <StatusBar Grid.Row="2" Height="23" Background="{DynamicResource WalkaboutStatusBarBrush}" Foreground="{DynamicResource WalkaboutStatusBarTextBrush}">
+        <StatusBar Grid.Row="2" Height="23">
             <StatusBarItem x:Name="StatusMessage" HorizontalAlignment="Left"/>
             <StatusBarItem HorizontalAlignment="Right">
                 <Grid >
