--- a/Source/WPF/MyMoney/Properties/DesignTimeResources.xaml
+++ b/Source/WPF/MyMoney/Properties/DesignTimeResources.xaml
@@ -1,19 +1,7 @@
 ﻿<ResourceDictionary
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
     <ResourceDictionary.MergedDictionaries>
-        <!--<ResourceDictionary Source="/MyMoney;component/System/Windows/Controls/DataVisualization/Themes/generic.xaml"/>
-		<ResourceDictionary Source="/MyMoney;component/Themes/generic.xaml"/>
-		<ResourceDictionary Source="/MyMoney;component/Charts/Styles.xaml"/>
-		<ResourceDictionary Source="/MyMoney;component/Themes/Theme-VS2010.xaml"/>
-        <ResourceDictionary Source="/MyMoney;component/Themes/Theme-Flat.xaml"/>
-	</ResourceDictionary.MergedDictionaries>
-	-->
-        <ResourceDictionary Source="/MyMoney;component/System/Windows/Controls/DataVisualization/Themes/generic.xaml"/>
         <ResourceDictionary Source="/MyMoney;component/Themes/generic.xaml"/>
-        <ResourceDictionary Source="/MyMoney;component/Charts/Styles.xaml"/>
-        <ResourceDictionary Source="/MyMoney;component/Themes/GenericWindows8.xaml"/>
-        <ResourceDictionary Source="/MyMoney;component/Themes/GenericWindows7.xaml"/>
-        <ResourceDictionary Source="/MyMoney;component/Themes/Theme-Flat.xaml"/>
+        <ResourceDictionary Source="/MyMoney;component/Charts/Styles.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
